Fixed styling so the text is always readable

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ h6 {
 }
 
 .card-text1 {
-  color: white;
+  color: black;
 }
 
 
